[metadata]
name = wcpan.drive
version = attr: wcpan.drive.__version__
description = asynchronous generic cloud drive API
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
author = Wei-Cheng Pan
author_email = legnaleurc@gmail.com
url = https://github.com/legnaleurc/wcpan.drive

[options]
packages = wcpan.drive
python_requires = >=3.8
install_requires =
    PyYAML >= 3.12
    arrow >= 0.12.1
    wcpan.logger >= 1.2.3
    wcpan.worker >= 4.1.2
